# HyperMythNode

./: .env.example  .gitignore  Cargo.toml  HOLOGRAPHIC_INTERFACE_ASSEMBLY.md  README.md  package-lock.json  package.json
adapters/automaton/: README.md
adapters/contactway/: Cargo.toml
adapters/contactway/src/: bridge.rs  lib.rs
adapters/game-of-life/: Cargo.toml  README.md
adapters/game-of-life/src/: lib.rs
adapters/hypercinema/: README.md
adapters/tectonic/: README.md
adapters/threejs/: Cargo.toml  README.md
adapters/threejs/src/: lib.rs
agents/hermes/: README.md
agents/hermes/roles/: asimog.md  asimov-guide.md  hypercinema-delegate.md  interpreter.md
agents/interfaceassembly/: README.md
agents/solana-agent-kit/: README.md  package.json
apps/mobile-companion/: README.md
apps/unity-client/: README.md
apps/web/: package.json
crates/lx-core/: Cargo.toml
crates/lx-core/src/: main.rs
crates/lx-protocol/: Cargo.toml
desktop/claw-companion/: README.md  package.json
desktop/claw-shell/: package.json
docs/: 01_CHARTER.md  02_CONSTITUTION.md  QUEST_BUILD.md  VOXEL_ENGINE_INTEGRATION.md  contactway-native-adoption.md
experiments/rl-bakery/: README.md
framework/interfaceassembly/: GISTBOOK.md  README.md  THIRD_PARTY_NOTICES.md  constitution.md
materials/ascii/: FLEX_TEXTURE_NOTES.md  README.md
research/personal/: HITCHHIKERS_GUIDE_TO_HARDCORE_FINANCE_NOTES.md  README.md
research/unpacked/: _manifest.txt
research/unpacked/hypermyths-super-assembly (3)/hypermyths-super-assembly/: Cargo.toml
research/unpacked/hypermyths-super-assembly (3)/hypermyths-super-assembly/apps/webgui/src/app/: page.tsx
research/unpacked/hypermyths-super-assembly (3)/hypermyths-super-assembly/crates/superbrain-api/: Cargo.toml
research/unpacked/hypermyths-super-assembly (3)/hypermyths-super-assembly/crates/superbrain-cli/src/: main.rs
research/unpacked/hypermyths-super-assembly (3)/hypermyths-super-assembly/crates/superbrain-core/src/: runtime.rs  types.rs
research/unpacked/hypermyths-super-assembly (3)/hypermyths-super-assembly/crates/superbrain-tui/src/: main.rs
research/unpacked/hypermyths-super-assembly (3)/hypermyths-super-assembly/data/: solana_whitelist.example.json
research/unpacked/hypermyths-super-assembly (3)/hypermyths-super-assembly/docs/: AGENTS.md  ARCHITECTURE.md  CHARTER.md  CONSTITUTION.md
research/unpacked/hypermyths-super-assembly (5)/hypermyths-super-assembly/: Cargo.toml  README.md
research/unpacked/hypermyths-super-assembly (5)/hypermyths-super-assembly/apps/webgui/: tailwind.config.ts
research/unpacked/hypermyths-super-assembly (5)/hypermyths-super-assembly/apps/webgui/src/app/: globals.css  page.tsx
research/unpacked/hypermyths-super-assembly (5)/hypermyths-super-assembly/crates/superbrain-cli/src/: main.rs
research/unpacked/hypermyths-super-assembly (5)/hypermyths-super-assembly/crates/superbrain-core/src/: engine.rs  exchange.rs  seed.rs  types.rs
research/unpacked/hypermyths-super-assembly (5)/hypermyths-super-assembly/crates/superbrain-tui/src/: main.rs
research/unpacked/hypermyths-super-assembly (5)/hypermyths-super-assembly/docs/: BUILD_ORDER.md
research/unpacked/hypermyths-super-assembly (5)/hypermyths-super-assembly/scripts/: dev-check.sh
research/unpacked/hypermyths-super-assembly/hypermyths-super-assembly/: .gitignore  Cargo.toml  README.md
research/unpacked/hypermyths-super-assembly/hypermyths-super-assembly/apps/webgui/: package.json
research/unpacked/hypermyths-super-assembly/hypermyths-super-assembly/apps/webgui/src/app/: globals.css  page.tsx
research/unpacked/hypermyths-super-assembly/hypermyths-super-assembly/apps/webgui/src/components/: Panel.tsx
research/unpacked/hypermyths-super-assembly/hypermyths-super-assembly/crates/superbrain-cli/: Cargo.toml
research/unpacked/hypermyths-super-assembly/hypermyths-super-assembly/crates/superbrain-cli/src/: main.rs
research/unpacked/hypermyths-super-assembly/hypermyths-super-assembly/crates/superbrain-core/src/: model.rs
research/unpacked/hypermyths-super-assembly/hypermyths-super-assembly/docs/: ARCHITECTURE.md
scripts/: build-apk.ps1  install-voxel-engines.ps1  sideload-quest.ps1  start-all.bat  start-all.sh
(+860 files in other folders)
