[package]
name = "lx-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
lx-protocol = { path = "../lx-protocol" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
