[package]
name = "lx-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
contactway-adapter = { path = "../../adapters/contactway" }
game-of-life-adapter = { path = "../../adapters/game-of-life" }
lx-protocol = { path = "../lx-protocol" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
threejs-adapter = { path = "../../adapters/threejs" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
