[workspace]
members = [
  "crates/superbrain-core",
  "crates/superbrain-cli",
  "crates/superbrain-tui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.2.0"
authors = ["Ra + OpenAI scaffold"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
