[package]
name = "superbrain-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
superbrain-core = { path = "../superbrain-core" }
